--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# Dependencies
 .npm-global/
 node_modules/
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Editor
+.vscode/
+.idea/
+
+# Shell
+.cache/
+.config/
+.local/
+.npm/
+.npmrc
+.wget-hsts
+
+# Logs
+*.log
